--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
  ╚██╗    ██╔╝       ██╔╝ 
   ╚═╝    ╚═╝        ╚═╝  
                           
-  درود بر توسعه دهندگان، آیا یک بازی کنیم؟
+             سلام بیا باهم بازی کنیم
 
   شماره ای را که در زیر می بینید دوباره تایپ کنید. بزن بریم
 
@@ -35,7 +35,7 @@
 
         <div id="app"></div>
 
-        <a class="app__author" href="https://www.youtube.com/@dvhost_cloud" target="_blank">by DVHOST.CLOUD</a>
+        <a class="app__author" href="https://github.com/0fariid0" target="_blank">by 0fariid0</a>
     </div>
     <!-- partial -->
     <script src='https://cdnjs.cloudflare.com/ajax/libs/react/15.3.1/react.min.js'></script>
