--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
         <div id="app"></div>
 
-        <a class="app__author" href="https://github.com/0fariid0" target="_blank">by 0fariid0</a>
+        <a class="app__author" href="https://github.com/0fariid0/bazi-hafezeh" target="_blank">by 0fariid0</a>
     </div>
     <!-- partial -->
     <script src='https://cdnjs.cloudflare.com/ajax/libs/react/15.3.1/react.min.js'></script>
